--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VIP_TAG=2025-09-14.1
 
 # DigitalOcean Container Registry
 REGISTRY=registry.digitalocean.com/tulemar
+
+# Environment file paths (can be overridden for local development)
+ENV_PATH=./env
