--- a/nginx/sites/grocery.conf
+++ b/nginx/sites/grocery.conf
@@ -1,40 +1,42 @@
+# HTTP server
 server {
     listen 80;
-    server_name shop.tulemar.vip;
+    server_name shop.tulemar.vip grocery.tulemar.vip grocery.localhost;
 
+    # For local development, we don't redirect to HTTPS
+    # In production, a separate compose file will include HTTPS server blocks
+    # and modify this configuration via volume mounts or environment-specific configs
+
+    # ACME challenge for Let's Encrypt (always allow HTTP for cert validation)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    server_name shop.tulemar.vip;
-
-    ssl_certificate /etc/letsencrypt/live/shop.tulemar.vip/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/shop.tulemar.vip/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
+    # Static files (always serve directly for performance)
     location /static/ {
         alias /srv/grocery_static/;
         expires 30d;
         add_header Cache-Control "public, immutable";
+        add_header X-Content-Type-Options "nosniff" always;
+
+        # Compression for text-based static files
+        location ~* \.(css|js|json|xml|txt)$ {
+            gzip_static on;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
     }
 
     location /media/ {
         alias /srv/grocery_media/;
         expires 7d;
         add_header Cache-Control "public";
+        add_header X-Content-Type-Options "nosniff" always;
     }
 
+    # All other requests - serve directly (local dev) or handle HTTPS redirects in production config
     location / {
+        # Serve directly for local development
         proxy_pass http://grocery_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -44,5 +46,13 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Basic security headers for local dev
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
     }
 }
+
+# HTTPS server (production only - conditionally included)
+# This block will be managed by Docker Compose environment-specific configurations
