--- a/nginx/sites/guide.conf
+++ b/nginx/sites/guide.conf
@@ -1,40 +1,46 @@
+# HTTP server
 server {
     listen 80;
-    server_name guide.tulemar.vip;
+    server_name guide.tulemar.vip guide.localhost;
 
+    # For local development, we don't redirect to HTTPS
+    # In production, a separate compose file will include HTTPS server blocks
+    # and modify this configuration via volume mounts or environment-specific configs
+
+    # ACME challenge for Let's Encrypt (always allow HTTP for cert validation)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    server_name guide.tulemar.vip;
-
-    ssl_certificate /etc/letsencrypt/live/guide.tulemar.vip/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/guide.tulemar.vip/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
+    # Static files for VIP site (Django collectstatic handles these)
     location /static/ {
         alias /srv/vip_static/;
         expires 30d;
         add_header Cache-Control "public, immutable";
+        add_header X-Content-Type-Options "nosniff" always;
+
+        # Compression for text-based static files
+        location ~* \.(css|js|json|xml|txt)$ {
+            gzip_static on;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
     }
 
+    # Media files (user uploads)
     location /media/ {
         alias /srv/vip_media/;
         expires 7d;
         add_header Cache-Control "public";
+        add_header X-Content-Type-Options "nosniff" always;
     }
 
-    location / {
+    # Rate-limited endpoints for admin/API access
+    location /admin/login/ {
+        # Apply rate limiting for admin login
+        limit_req zone=vip_login burst=3 delay=2;
+
+        # Serve directly for local development
         proxy_pass http://vip_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -44,5 +50,53 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+
+        # Basic security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+    }
+
+    location /api/ {
+        # Apply rate limiting for API access
+        limit_req zone=vip_api burst=20 delay=10;
+
+        # Serve directly for local development
+        proxy_pass http://vip_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # Basic security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+    }
+
+    # All other requests
+    location / {
+        # Serve directly for local development
+        proxy_pass http://vip_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # Basic security headers for local dev
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
     }
 }
+
+# HTTPS server (production only - conditionally included)
+# This block will be managed by Docker Compose environment-specific configurations
