--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,16 @@ http {
                application/javascript application/xml+rss
                application/json application/font-woff2;
 
+    # Environment variable mapping for SSL enabled flag
+    # Since nginx doesn't automatically read env vars, we'll use the compose env var
+    # The SSL_ENABLED environment variable from Docker Compose will be used directly in conditionals
+
+    # Rate limiting zones (defined globally)
+    limit_req_zone $binary_remote_addr zone=grocery_login:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=grocery_api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=vip_login:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=vip_api:10m rate=10r/s;
+
     # Upstreams with health monitoring
     upstream grocery_backend {
         server grocery-web:8000 max_fails=3 fail_timeout=30s;
