--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,11 +44,11 @@ http {
 
     # Upstreams with health monitoring
     upstream grocery_backend {
-        server grocery-web:8000 max_fails=3 fail_timeout=30s;
+        server tulemar_stack-grocery-web-1:8000 max_fails=3 fail_timeout=30s;
     }
 
     upstream vip_backend {
-        server vipsite-web:8001 max_fails=3 fail_timeout=30s;
+        server tulemar_stack-vipsite-web-1:8001 max_fails=3 fail_timeout=30s;
     }
 
     # Include site configurations
