--- a/.env
+++ b/.env
@@ -5,5 +5,4 @@ VIP_TAG=2025-09-15.1
 # DigitalOcean Container Registry
 REGISTRY=registry.digitalocean.com/tulemar
 
-# Environment file paths (can be overridden for local development)
-ENV_PATH=./env
+# Environment files are always in ./env/ - no override needed
