--- a/nginx/sites/grocery.conf
+++ b/nginx/sites/grocery.conf
@@ -54,5 +54,58 @@ server {
     }
 }
 
-# HTTPS server (production only - conditionally included)
-# This block will be managed by Docker Compose environment-specific configurations
+# HTTPS server (production)
+server {
+    listen 443 ssl http2;
+    server_name shop.tulemar.vip;
+
+    # SSL certificates from Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/shop.tulemar.vip/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/shop.tulemar.vip/privkey.pem;
+
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
+
+    # Security headers
+    add_header Strict-Transport-Security "max-age=63072000" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # Static files
+    location /static/ {
+        alias /srv/grocery_static/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+
+        location ~* \.(css|js|json|xml|txt)$ {
+            gzip_static on;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
+    location /media/ {
+        alias /srv/grocery_media/;
+        expires 7d;
+        add_header Cache-Control "public";
+    }
+
+    # Proxy to application
+    location / {
+        proxy_pass http://grocery_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_redirect off;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+}
